# check-in

./: .gitignore  Cargo.toml  Dioxus.toml  data.csv  dataa.csv
src/: components.rs  main.rs  style.css
src/components/: Home.rs  NavBar.rs  Push.rs  Record.rs  mod.rs
