[package]
name = "check-in"
version = "0.1.0"
authors = ["lucianopinochet <lucianobenjaminpm@gmail.com>"]
edition = "2021"

[dependencies]

dioxus-desktop = { version = "0.4" }
dioxus = { version = "0.4" }

dioxus-router = { version = "0.4" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
csv = "1.2.2"
serde = "1.0.188"

